--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A simple chat system with node.js",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "start": "node app.js"
+  },  
   "keywords": [
     "chat",
     "node"
@@ -25,5 +26,8 @@
     "gulp-refresh": "^1.1.0",
     "http": "0.0.0",
     "jquery": "^3.2.1"
+  }, 
+  "engines": {
+    "node": "6.11.0"
   }
 }
